- Added images to documentation - Fixed swagger details
